# RustyAssetBundleEXtractor

./: Cargo.toml  README.md
examples/dump-bundle/: Cargo.toml
examples/dump-bundle/src/: main.rs
runirip-objects/: Cargo.toml
runirip-objects/src/: classes.rs  lib.rs  map.rs  pptr.rs
runirip-objects/src/classes/: ids.rs  mod.rs
src/: common_strings.rs  error.rs  lib.rs  objects.rs  read_ext.rs  type_tree.rs  unitycn.rs
src/files/: bundle_file.rs  mod.rs  serialized_file.rs  unity_file.rs  web_file.rs
src/objects/: classes.rs  map.rs  pptr.rs
src/type_tree/: de.rs  mod.rs  node.rs  value.rs
