[package]
name = "lead_rabex"
version = "0.1.0"
edition = "2021"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "COPYRIGHT"
]
authors = ["Rudolf Kolbe <rkolbe96@gmail.com>", "LeadRDRK"]
description = "[Fork] wip UnityRustExtractor and patcher"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeadRDRK/RustyAssetBundleEXtractor"


[dependencies]
byteorder = "1.5.0"
lazy_static = "1.5.0"
paste = "1.0.15"
bitflags = "2.9.1"
num_enum = "0.7.4"

# Compression
lzma-rs = { version = "0.3.0", optional = true }
brotli = { version = "8.0.1", optional = true }
lz4_flex = { version = "0.11", optional = true }

# UnityCN Encryption
aes = { version = "0.8.4", optional = true }
cbc = { version = "0.1.2", optional = true }

# Object Serialization & Export
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
rmp = { version = "^0.8", optional = true }
rmp-serde = { version = "1.3.0", optional = true }


[features]
default = ["lzma", "brotli", "lz4", "unitycn_encryption", "json", "yaml", "msgpack"]

lzma = ["dep:lzma-rs"]
brotli = ["dep:brotli"]
lz4 = ["dep:lz4_flex"]

unitycn_encryption = ["dep:aes", "dep:cbc"]

json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
msgpack = ["dep:rmp", "dep:rmp-serde"]
