[package]
name = "lead_rabex"
version = "0.1.0"
edition = "2021"
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "COPYRIGHT"
]
authors = ["Rudolf Kolbe <rkolbe96@gmail.com>", "LeadRDRK"]
description = "[Fork] wip UnityRustExtractor and patcher"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeadRDRK/RustyAssetBundleEXtractor"


[dependencies]
byteorder = "1.5.0"
lazy_static = "1.5.0"
paste = "1.0.15"
bitflags = "2.9.1"
num_enum = "0.7.4"

# Compression
lzma-rs = { version = "0.3.0", optional = true }
brotli = { version = "8.0.1", optional = true }
lz4_flex = { version = "0.11", optional = true }

# UnityCN Encryption
aes = { version = "0.8.4", optional = true }
cbc = { version = "0.1.2", optional = true }

# Object Serialization & Export
serde = { version = "1.0.219", features = ["derive"] }


[features]
default = ["lzma", "brotli", "lz4", "unitycn_encryption"]

lzma = ["dep:lzma-rs"]
brotli = ["dep:brotli"]
lz4 = ["dep:lz4_flex"]

unitycn_encryption = ["dep:aes", "dep:cbc"]