[package]
name = "runirip"
version = "0.1.2"
edition = "2021"
authors = ["LeadRDRK", "Rudolf Kolbe <rkolbe96@gmail.com>"]
description = "Unity asset files manipulation library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeadRDRK/runirip"


[dependencies]
runirip-objects = { version = "0", optional = true, path = "./runirip-objects" }

byteorder = "1.5"
paste = "1.0"
bitflags = "2.9"
num_enum = "0.7"

# Compression
lzma-rs = { version = "0.3", optional = true }
brotli = { version = "8.0", optional = true }
lz4_flex = { version = "0.11", optional = true }

# UnityCN Encryption
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }

# Object Serialization & Export
serde = { version = "1.0", features = ["derive"], optional = true }


[features]
default = ["lzma", "brotli", "lz4", "unitycn_encryption", "objects", "serde"]

lzma = ["dep:lzma-rs"]
brotli = ["dep:brotli"]
lz4 = ["dep:lz4_flex"]

unitycn_encryption = ["dep:aes", "dep:cbc"]
objects = ["dep:runirip-objects", "serde"]
serde = ["dep:serde"]


[workspace]
resolver = "2"
members = [
    "runirip-objects",
    "examples/*"
]