[package]
name = "runirip-objects"
version = "0.1.0"
edition = "2021"
authors = ["LeadRDRK", "Rudolf Kolbe <rkolbe96@gmail.com>"]
description = "Unity asset files manipulation library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeadRDRK/runirip"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }